--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Registro de Evidência Arqueológica</title>
   <style>
     body {
-      background-color: #fff9c4;
+      background-color: #e9e5e5ec;
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
@@ -38,14 +38,14 @@
       margin-bottom: 20px;
       border: none;
       border-radius: 5px;
-      background-color: #fbc02d;
+      background-color: #66B284;
       cursor: pointer;
     }
 
     .sidebar {
       width: 400px;
-      background-color: #fffde7;
-      border-left: 2px solid #fbc02d;
+      background-color: #008000;
+      border-left: 5px solid #7a3b00;
       overflow-y: auto;
       padding: 20px;
     }
@@ -58,13 +58,14 @@
       border-bottom: 1px solid #ccc;
       padding-bottom: 5px;
       margin-bottom: 10px;
+      color: white;
     }
 
     .item {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #fff9c4;
+      background-color: #66B284;
       padding: 8px;
       margin-bottom: 5px;
       border-radius: 5px;
@@ -72,21 +73,40 @@
 
     .item span {
       font-weight: bold;
+      flex: 1;
+    }
+
+    .item img {
+      max-width: 40px;
+      max-height: 40px;
+      margin-left: 10px;
+      border-radius: 4px;
+      object-fit: cover;
     }
 
     .item button {
-      background-color: red;
+      background-color: rgb(179, 197, 182);
       color: white;
       border: none;
       padding: 4px 8px;
       border-radius: 3px;
       cursor: pointer;
+      margin-left: 10px;
+    }
+
+    #imagem-preview {
+      margin-bottom: 10px;
+      max-width: 200px;
+      max-height: 200px;
+      display: none;
+      border-radius: 4px;
     }
   </style>
 </head>
 <body>
-
   <div class="form-container">
+
+    <h1 style="text-align: center; font-size: 2.5em;">Registro arqueológico</h1>
     <input type="text" id="catalogo" placeholder="Nome do catálogo" />
     <select id="tipo">
       <option value="">Selecione o tipo</option>
@@ -97,6 +117,8 @@
       <option>Restos de Animais e Plantas</option>
       <option>Evidências de Rituais e Práticas Culturais</option>
     </select>
+    <input type="file" id="imagem" accept="image/*" />
+    <img id="imagem-preview" />
     <button id="confirmar" disabled>Confirmar</button>
   </div>
 
@@ -107,30 +129,51 @@
   <script>
     const catalogoInput = document.getElementById('catalogo');
     const tipoSelect = document.getElementById('tipo');
+    const imagemInput = document.getElementById('imagem');
     const confirmarBtn = document.getElementById('confirmar');
     const listaObjetos = document.getElementById('listaObjetos');
+    const imagemPreview = document.getElementById('imagem-preview');
 
     let objetos = JSON.parse(localStorage.getItem('objetos')) || [];
+    let imagemBase64 = '';
 
-    confirmarBtn.disabled = true;
+    catalogoInput.addEventListener('input', verificarCampos);
+    tipoSelect.addEventListener('change', verificarCampos);
+    imagemInput.addEventListener('change', carregarImagem);
 
-    catalogoInput.addEventListener('input', () => {
-      confirmarBtn.disabled = catalogoInput.value.trim() === '';
-    });
+    function verificarCampos() {
+      confirmarBtn.disabled = catalogoInput.value.trim() === '' || tipoSelect.value === '';
+    }
+
+    function carregarImagem(event) {
+      const file = event.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          imagemBase64 = e.target.result;
+          imagemPreview.src = imagemBase64;
+          imagemPreview.style.display = 'block';
+        };
+        reader.readAsDataURL(file);
+      }
+    }
 
     confirmarBtn.addEventListener('click', () => {
       const nome = catalogoInput.value.trim();
       const tipo = tipoSelect.value;
 
       if (nome && tipo) {
-        // Procurar primeiro índice vazio
         let index = objetos.findIndex(o => o === null);
         if (index === -1) index = objetos.length;
 
-        objetos[index] = { nome, tipo };
+        objetos[index] = { nome, tipo, imagem: imagemBase64 || null };
         salvarEAtualizar();
         catalogoInput.value = '';
         tipoSelect.value = '';
+        imagemInput.value = '';
+        imagemPreview.src = '';
+        imagemPreview.style.display = 'none';
+        imagemBase64 = '';
         confirmarBtn.disabled = true;
       }
     });
@@ -142,7 +185,6 @@
 
     function renderizarObjetos() {
       listaObjetos.innerHTML = '';
-
       const tiposAgrupados = {};
 
       objetos.forEach((obj, index) => {
@@ -150,11 +192,7 @@
           if (!tiposAgrupados[obj.tipo]) {
             tiposAgrupados[obj.tipo] = [];
           }
-
-          tiposAgrupados[obj.tipo].push({
-            index: index,
-            nome: obj.nome
-          });
+          tiposAgrupados[obj.tipo].push({ index, nome: obj.nome, imagem: obj.imagem });
         }
       });
 
@@ -166,10 +204,23 @@
         tiposAgrupados[tipo].forEach(obj => {
           const div = document.createElement('div');
           div.className = 'item';
-          div.innerHTML = `
-            <span>#${(obj.index + 1).toString().padStart(3, '0')} - ${obj.nome}</span>
-            <button onclick="deletar(${obj.index})">X</button>
-          `;
+
+          const span = document.createElement('span');
+          span.textContent = `#${(obj.index + 1).toString().padStart(3, '0')} - ${obj.nome}`;
+
+          const deleteBtn = document.createElement('button');
+          deleteBtn.textContent = 'X';
+          deleteBtn.onclick = () => deletar(obj.index);
+
+          div.appendChild(span);
+
+          if (obj.imagem) {
+            const img = document.createElement('img');
+            img.src = obj.imagem;
+            div.appendChild(img);
+          }
+
+          div.appendChild(deleteBtn);
           secao.appendChild(div);
         });
 
